apps/media/nzbget/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nzbget
  namespace: media
spec:
  selector:
    app: nzbget
  ports:
  - name: nzbget
    port: 6789
    targetPort: 6789
